--- a/index.html.html
+++ b/index.html.html
@@ -33,7 +33,7 @@ function closeDoor(){
 
         <!--        <audio controls autoplay loop>-->
 
-    <audio src="style/ytmp3free.cc_beach-house-ambience-youtubemp3free.org.mp3" id="mp3File"></audio>
+    <audio src="style/mixkit-small-waves-harbor-rocks-1208.wav" id="mp3File"></audio>
 
     <button onclick="openDoor()">OPEN</button>
     <button onclick="closeDoor()">CLOSE</button>
